--- a/public/wp-content/themes/blackrock/scss/style.scss
+++ b/public/wp-content/themes/blackrock/scss/style.scss
@@ -7,26 +7,24 @@
 @import "layout/_general.scss";
 @import "layout/_footer.scss";
 @import "layout/_grid.scss";
-@import "layout/_navigation.scss";
 @import "layout/_header.scss";
 
 @import "elements/_buttons.scss";
-@import "elements/_modal.scss";
+@import "elements/_modal_popup.scss";
 
-@import "modules/_error404.scss";
 @import "modules/_card_carousel.scss";
-@import "modules/_page_reveal_slicing.scss";
-@import "modules/_copy_two_images.scss";
-@import "modules/_floors.scss";
 @import "modules/_contact.scss";
+@import "modules/_copy_two_images.scss";
+@import "modules/_error404.scss";
+@import "modules/_floors.scss";
 @import "modules/_home_hero.scss";
 @import "modules/_home_section.scss";
 @import "modules/_image_carousel.scss";
 @import "modules/_keep_exploring.scss";
 @import "modules/_map.scss";
-@import "modules/_timeline.scss";
-@import "modules/_modal_popup.scss";
 @import "modules/_one_col_copy_image.scss";
+@import "modules/_page_reveal_slicing.scss";
+@import "modules/_timeline.scss";
 @import "modules/_title_multiple_columns.scss";
 @import "modules/_two_col_copy_image.scss";
 @import "modules/_two_col_image.scss";
