--- a/public/wp-content/themes/blackrock/scss/variables/_colours.scss
+++ b/public/wp-content/themes/blackrock/scss/variables/_colours.scss
@@ -17,6 +17,17 @@ $br-white: #FFFFFF;
     ul,
     li {
       color: $br-grey;
-    }
+    }  
+  }
+  
+  .caption p {
+    color: $br-black;
+  }
+}
+
+.page-black {
+  
+  .caption p {
+    color: $br-white;
   }
 }
