--- a/public/wp-content/themes/blackrock/scss/elements/_buttons.scss
+++ b/public/wp-content/themes/blackrock/scss/elements/_buttons.scss
@@ -116,7 +116,8 @@ a.button {
 	padding-left: 60px;
 	position: relative;
 	cursor: pointer;
-
+	margin-bottom: 24px;
+	
 	&:before {
 		position: absolute;
 		left: 0;
