--- a/public/wp-content/themes/blackrock/scss/modules/_contact.scss
+++ b/public/wp-content/themes/blackrock/scss/modules/_contact.scss
@@ -1,150 +1,151 @@
 .contact-module-container {
-	background-color: #000000;
-	width: 100vw;
-	padding-top: 100px;
-	padding-bottom: 0;
-	position: relative;
-	z-index: 1;
+  background-color: #000000;
+  width: 100vw;
+  padding-top: 100px;
+  padding-bottom: 0;
+  position: relative;
+  z-index: 1;
 
-	@media #{$mq-tablet-port} {
-		padding-top: calc(100vw / 12);
-		padding-bottom: calc(100vw / 12);
-	}
+  @media #{$mq-tablet-port} {
+    padding-top: calc(100vw / 12);
+    padding-bottom: calc(100vw / 12);
+    min-height: calc(100vh - 80px);
+  }
 
-	.contacts-container {
-		@include grid;
+  .contacts-container {
+    @include grid;
 
-		@media #{$mq-tablet-port} {
-			grid-template-columns: 1fr;
-			grid-template-areas: "contacts""img";
-		}
+    @media #{$mq-tablet-port} {
+      grid-template-columns: 1fr;
+      grid-template-areas: "contacts""img";
+    }
 
-		@media #{$mq-tablet-desk} {
-			grid-template-columns: 6fr 1fr 5fr;
-			grid-template-areas: "contacts . img ";
-		}
+    @media #{$mq-tablet-desk} {
+      grid-template-columns: 6fr 1fr 5fr;
+      grid-template-areas: "contacts . img ";
+    }
 
-		.left {
-			@include grid;
-			align-content: space-evenly;
-			grid-area: contacts;
-			margin: 0 !important;
-			padding-top: calc(100vw / 12);
+    .left {
+      @include grid;
+      align-content: space-evenly;
+      grid-area: contacts;
+      margin: 0 !important;
+      padding-top: calc(100vw / 12);
 
-			.copy {
-				display: block;
-				height: auto;
-				padding: 0;
-				margin: 0;
+      .copy {
+        display: block;
+        height: auto;
+        padding: 0;
+        margin: 0;
 
 
-				h2 {
-					@include headline-30;
-					padding-bottom: calc(100vw / 24);
-					color: white;
-					margin-left: 20px;
-					margin-bottom: 40px;
-					margin-top: 0;
+        h2 {
+          @include headline-30;
+          padding-bottom: calc(100vw / 24);
+          color: white;
+          margin-left: 20px;
+          margin-bottom: 70px;
+          margin-top: 0;
 
-					@media #{$mq-tablet-port} {
-						@include headline-50;
-						margin-left: 0;
-					}
-				}
+          @media #{$mq-tablet-port} {
+            @include headline-50;
+            margin-left: 0;
+          }
+        }
 
-				img {
-					width: 100px;
-					margin-left: 20px;
-					margin-bottom: 20px;
+        img {
+          width: 100px;
+          margin-left: 20px;
+          margin-bottom: 20px;
 
-					@media #{$mq-tablet-port} {
-						width: auto;
-						margin-left: 0;
-						margin-top: calc(100vw / 12);
-						margin-bottom: 60px;
-					}
-				}
-			}
-		}
+          @media #{$mq-tablet-port} {
+            width: auto;
+            margin-left: 0;
+            margin-top: calc(100vw / 12);
+            margin-bottom: 60px;
+          }
+        }
+      }
+    }
 
-		.contacts {
-			@include grid;
+    .contacts {
+      @include grid;
 
-			@media #{$mq-tablet-port} {
-				padding: 0 !important;
-				margin: 0 !important;
+      @media #{$mq-tablet-port} {
+        padding: 0 !important;
+        margin: 0 !important;
 
-				grid-template-columns: repeat(3, 1fr);
-			}
+        grid-template-columns: repeat(3, 1fr);
+      }
 
-			.contact {
-				margin: 20px;
-				border-top: 2px solid white;
-				@include body-20;
-				color: $br-white;
+      .contact {
+        margin: 20px;
+        border-top: 2px solid white;
+        @include body-20;
+        color: $br-white;
 
-				@media #{$mq-tablet-port} {
-					margin: 0;
-				}
+        @media #{$mq-tablet-port} {
+          margin: 0;
+        }
 
-				h3,
-				h4 {
-					@include body-20;
-				}
+        h3,
+        h4 {
+          @include body-20;
+        }
 
-				h3 {
-					margin-bottom: 0;
-					padding-bottom: 0;
-				}
+        h3 {
+          margin-bottom: 0;
+          padding-bottom: 0;
+        }
 
-				h4 {
-					margin-top: 0;
-				}
+        h4 {
+          margin-top: 0;
+        }
 
-				a {
-					color: $br-white;
-					text-decoration: none;
+        a {
+          color: $br-white;
+          text-decoration: none;
 
-					&:hover {
-						text-decoration: underline;
-					}
-				}
+          &:hover {
+            text-decoration: underline;
+          }
+        }
 
-				&:last-child {
-					padding-bottom: 40px;
+        &:last-child {
+          padding-bottom: 40px;
 
-					@media #{$mq-tablet-port} {
-						padding-bottom: 0;
-					}
-				}
-			}
-		}
+          @media #{$mq-tablet-port} {
+            padding-bottom: 0;
+          }
+        }
+      }
+    }
 
-		.image-container {
-			grid-area: img;
-			line-height: 0;
+    .image-container {
+      grid-area: img;
+      line-height: 0;
 
-			@media #{$mq-tablet-desk} {
-				position: sticky;
-				top: 0;
-				align-self: end;
-			}
-		}
-	}
+      @media #{$mq-tablet-desk} {
+        position: sticky;
+        top: 0;
+        align-self: end;
+      }
+    }
+  }
 
-	.contact-logo {
-		width: calc((100vw - 80px) / 12);
-	}
+  .contact-logo {
+    width: calc((100vw - 80px) / 12);
+  }
 }
 
 .contact-open .contact-module-container {
-	transform: translateX(0);
+  transform: translateX(0);
 }
 
 .home .contact-module-container {
-	margin-top: 0;
+  margin-top: 0;
 
-	@media #{$mq-tablet-port} {
-		margin-top: calc((100vh - 80px) *-1);
-	}
+  @media #{$mq-tablet-port} {
+    margin-top: calc((100vh - 80px) *-1);
+  }
 }
