--- a/public/wp-content/themes/blackrock/scss/modules/_copy_two_images.scss
+++ b/public/wp-content/themes/blackrock/scss/modules/_copy_two_images.scss
@@ -1,106 +1,141 @@
 .copy-two-images {
-	display: grid;
-	margin: 0 20px 0 20px;
-	grid-gap: 10px;
-	grid-template-columns: 1fr 1fr;
-	grid-template-areas: "copy copy""image-container-left image-container-right";
+  display: grid;
+  margin: 0 20px 0 20px;
+  grid-gap: 10px;
+  grid-template-columns: 1fr 1fr;
+  grid-template-areas: "copy copy""image-container-left image-container-right";
 
-	@include grid;
+  @include grid;
 
-	@media #{$mq-tablet-port} {
-		margin-top: calc(100vw / 12);
-	}
+  @media #{$mq-tablet-port} {
+    margin-top: calc(100vw / 12);
+  }
 
-	@media #{$mq-tablet-desk} {
-		margin: calc(100vw / 12) 40px 0 40px;
-		grid-template-columns: 5fr 1fr 2fr 4fr;
-		grid-template-areas: "copy . . image-container-left""image-container-right image-container-right  . .";
-	}
+  @media #{$mq-tablet-desk} {
+    margin: calc(100vw / 12) 40px 0 40px;
+    grid-template-columns: 5fr 1fr 1fr 5fr;
+    grid-template-areas: "copy . . image-container-left""image-container-right image-container-right  . .";
+  }
+
+  @media #{$mq-desk-small} {
+    margin: calc(100vw / 12) 40px 0 40px;
+    grid-template-columns: 5fr 1fr 2fr 4fr;
+    grid-template-areas: "copy . . image-container-left""image-container-right image-container-right  . .";
+  }
+
+  .copy {
+    padding: 100px 0px;
+    grid-area: copy;
+
+    @media #{$mq-tablet-desk} {
+      padding: 0 0 calc(100vw / 12) 0;
+    }
+
+    p {
+      @include body-35;
+      font-size: 20px;
+
+      @media #{$mq-tablet-port} {
+        @include body-35;
+      }
+
+      &:last-of-type {
+        margin-top: 0;
+      }
+
+      span {
+        color: $br-blue;
+        @include body-20;
+      }
+    }
+
+    blockquote p {
+      margin-bottom: 0;
+
+      &:first-of-type {
+        font-size: 20px;
+        padding-top: 0;
+        margin-top: 0;
+
+        @media #{$mq-tablet-port} {
+          @include body-35;
+        }
+      }
 
 
+      &:last-of-type {
+        font-size: 20px;
+        margin-bottom: 0;
+        line-height: 20px;
 
-	.copy {
-		padding: 100px 20px;
-		grid-area: copy;
+        @media #{$mq-tablet-desk} {
+          @include body-35;
+          margin-bottom: 0;
+          margin-top: 0;
+          padding-top: 0;
+          line-height: 1em;
+        }
+      }
+    }
+  }
 
-		@media #{$mq-tablet-port} {
-			//padding: calc(100vw / 12) 0 calc(100vw / 12) 0;
-			padding: 0 0 calc(100vw / 12) 0;
-		}
+  .image-container.first {
+    grid-area: image-container-left;
 
-		p {
-			@include body-35;
+    @media #{$mq-tablet-desk} {
+      padding-top: calc(100vw / 12);
+    }
+  }
 
-			&:last-of-type {
-				margin-top: 0;
-			}
+  .image-container.second {
+    grid-area: image-container-right;
 
-			span {
-				color: $br-blue;
-				@include body-20;
-			}
-		}
+    margin-top: 0;
 
-		blockquote p {
-			margin-bottom: 0;
+    @media #{$mq-tablet-desk} {
+      margin-top: calc((100vw / 12) * -1);
+    }
 
-			&:last-of-type {
-				font-size: 20px;
-			}
-		}
-	}
+    @media #{$mq-desk-small} {
+      margin-top: calc((100vw / 12) * -2);
+    }
+  }
 
-	.image-container.first {
-		grid-area: image-container-left;
+  &.mirrored {
+    display: grid;
+    margin: 0 20px 0 20px;
+    grid-gap: 10px;
+    grid-template-columns: 1fr 1fr;
+    grid-template-areas: "copy copy""image-container-right image-container-left";
 
-		@media #{$mq-tablet-desk} {
-			padding-top: calc(100vw / 12);
-		}
-	}
+    @media #{$mq-tablet-port} {
+      margin: 0 40px 0 40px;
+      margin-top: calc(100vw / 12);
+    }
 
-	.image-container.second {
-		grid-area: image-container-right;
+    @media #{$mq-tablet-desk} {
+      grid-template-columns: 5fr 1fr 1fr 1fr 4fr;
+      grid-template-areas: "image-container-left . . copy copy"". . . . image-container-right";
+    }
 
-		@media #{$mq-tablet-desk} {
-			margin-top: calc((100vw / 12) * -1);
-		}
-	}
+    .image-container {
+      padding-top: 0;
+    }
 
-	&.mirrored {
-		display: grid;
-		margin: 0 20px 0 20px;
-		grid-gap: 10px;
-		grid-template-columns: 1fr 1fr;
-		grid-template-areas: "copy copy""image-container-right image-container-left";
+    .copy {
+      padding-top: (100vw / 12);
+    }
 
-		@media #{$mq-tablet-port} {
-			margin: 0 40px 0 40px;
-			margin-top: calc(100vw / 12);
-		}
+    .image-container {
 
-		@media #{$mq-tablet-desk} {
-			grid-template-columns: 5fr 1fr 1fr 1fr 4fr;
-			grid-template-areas: "image-container-left . . copy copy"". . . . image-container-right";
-		}
+      .image {
+        grid-area: img;
+      }
 
-		.image-container {
-			padding-top: 0;
-		}
+      .caption {
+        grid-area: cap;
+      }
 
-		.copy {
-			padding-top: (100vw / 12);
-		}
-
-		.image-container {
-
-			.image {
-				grid-area: img;
-			}
-
-			.caption {
-				grid-area: cap;
-			}
-
-		}
-	}
+    }
+  }
 }
